src/app/home/personal-details/personal-details.component.scss
.container {
  height: 100%;
  overflow: auto;
  display: flex;
}

section {
  width: 50%;
  display: block;
  padding: 4rem 8rem;
  overflow-y: auto;
  touch-action: pan-y;
  .header {
    font-size: 1.5rem;
    margin-bottom: 2rem;
  }
  span,
  a {
    display: block;
    user-select: text;
  }
  .detail {
    width: 100%;
    display: flex;
    align-items: center;
    margin: 0.25rem 0;
    border-radius: 0.25rem;
    padding: 0.5rem;
    position: relative;
    user-select: text;
    .icon {
      height: 2rem;
      width: 2rem;
      font-size: 2rem;
      margin-right: 1rem;
      user-select: none;
    }
    .ratings {
      position: absolute;
      display: flex;
      align-items: center;
      right: 4rem;
      top: 0;
      .icon {
        height: 1.5rem;
        width: 1.5rem;
        font-size: 1.5rem;
        margin: 0;
      }
    }
    .lines {
      display: block;
    }
    .link-ref {
      line-height: 1.5rem;
      .icon {
        font-size: 1rem;
        height: 1rem;
        width: 1rem;
        margin-left: 0.25rem;
        display: none;
      }
      &:hover {
        .icon {
          display: inline-block;
        }
      }
    }
  }
}

@media screen and (max-width: 1200px) and (max-height: 1023px) {
  .container {
    display: block;
    section {
      width: 100%;
      padding: 2rem 1rem;
    }
  }
}

@media screen and (max-width: 1200px) and (min-height: 1024px) {
  .container {
    display: block;
    section {
      height: auto;
      width: 100%;
      padding: 2rem 1rem;
    }
  }
}

